[PBNTR] Bug Fix: Rails Advanced Table Dark Mode

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -157,7 +157,7 @@
 
   &.dark {
     .bg-white {
-      background-color: $bg_dark_card;
+      background: $bg_dark_card;
     }
 
     .bg-silver {
